--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "live-server": "^1.2.1",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.0",
