--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development"
+    "prod": "webpack serve --open --mode production",
+    "dev": "webpack serve --open --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,8 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-preset-minify": "^0.5.1",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
