--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-minify": "^0.5.1",
     "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^3.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
